# recursive_cargo_clean

./: Cargo.toml  README.md
src/: cli.yml  main.rs
