[package]
name = "recursive_cargo_clean"
version = "1.0.0"
authors = ["vlakreeh <zebpiasecki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
jwalk = "0.4.0"
colored = "1.9.2"
num_cpus = "1.12.0"
